--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
 
     <header>
-        <h1>Welcome to my Webpage :)</h1>
+        <h1>Welcome to my Webpage </h1>
     </header>
 
     <main>
