Added Button to Link

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h2>Here are a few links:</h2>
         <ul>
 
-            <li><a href="https://github.com/BHelber" target="_blank">GitHub</a></li>
+            <li><a href="https://github.com/BHelber" target="_blank"><button>GitHub</button></a></li>
 
         </ul>
     </main>
